fix: fix wrong documentation
